Add sample rate option to config, and better output file name
The native sample rate of the synthesized voice audio can now be set in the config file. This is useful for services like Azure's TTS which has voices that can be output in 48KHz.

Also now creates the final output file name based on the name of the input video file.

--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,9 @@
 	# The project name / project ID in the Google Cloud console. Required for translating
 google_project_id = your-project-name
 
+
 	# You an use a full file path, or the name of the file if it's in the same directory
+	# The video file name will also be used to name the final output audio file
 original_video_file_path = video.mp4
 srt_file_path = subtitles.srt
 
@@ -28,6 +30,12 @@ synth_voice_gender = MALE
 	# Must be a codec from 'Supported Audio Encodings' section here: https://cloud.google.com/speech-to-text/docs/encoding#audio-encodings
 	# This determines the codec returned by the API, not the one produced by the program! You probably shouldn't change this, it might not work otherwise
 synth_audio_encoding = MP3
+
+
+	# Enter the native sample rate for the voice audio provided by the TTS service
+	# This is usually 24KHz (24000), but some services like Azure offer higher quality audio at 48KHz (48000)
+	# Enter only number digits, no commas or anything
+synth_sample_rate = 24000
 
 
 	# Set to True if you don't want to translate the subtitles. If so, ignore the language variables
