Add Azure TTS Support
Adds support for Azure API and voices

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,4 @@
 [SETTINGS]
-	# The project name / project ID in the Google Cloud console. Required for translating
-google_project_id = your-project-name
-
 
 	# You an use a full file path, or the name of the file if it's in the same directory
 	# The video file name will also be used to name the final output audio file
@@ -9,21 +6,37 @@ original_video_file_path = video.mp4
 srt_file_path = subtitles.srt
 
 
+	# Which TTS service will you use?
+	# Possble Values: azure / google
+tts_service = google
+
+
+	# The project name / project ID in the Google Cloud console. Required for translating
+google_project_id = your-project-name
+
+	
+	# API Key for your Speech resource in Azure (cognitive speech)
+azure_speech_key = yourkeyxxxxxxxxxx
+	# The Location/Region of the speech resource. This should be listed on the same page as the API keys.
+	# Example: eastus
+azure_speech_region = abcdefg
+
+
 	# Set to True if you don't want to synthesize the audio. For example, if you already did that and are testing
 skip_synthesize = False
 
 
-	# The language of the synthesized voice. Might not necessarily be exactly the same as target_language variable below
+	# Google Only: The language of the synthesized voice. Might not necessarily be exactly the same as target_language variable below
 	# Examples - English: en-US    Spanish: es-us
 synth_language_code = es-us
 
 
 	# Choose one from here so it matches the target language: https://cloud.google.com/text-to-speech/docs/voices
-	# Examples - English: en-US-Neural2-I    Spanish: es-US-Neural2-B
+	# Examples - English: en-US-Neural2-I    Spanish: es-US-Neural2-B (google)  or es-MX-CecilioNeural (Azure)
 synth_voice_name = es-US-Neural2-B
 
 
-	# Should match the gender of the chosen voice abov
+	# Google Only: Should match the gender of the chosen voice above
 synth_voice_gender = MALE
 
 
