--- a/config.ini
+++ b/config.ini
@@ -16,23 +16,23 @@ google_project_id = your-project-name
 
 	
 	# API Key for your Speech resource in Azure (cognitive speech)
-azure_speech_key = yourkeyxxxxxxxxxx
+azure_speech_key = yourkeyxxxxxx
 	# The Location/Region of the speech resource. This should be listed on the same page as the API keys.
 	# Example: eastus
-azure_speech_region = abcdefg
+azure_speech_region = eastxyz
 
 
 	# Set to True if you don't want to synthesize the audio. For example, if you already did that and are testing
 skip_synthesize = False
 
 
-	# Google Only: The language of the synthesized voice. Might not necessarily be exactly the same as target_language variable below
-	# Examples - English: en-US    Spanish: es-us
+	#The language of the synthesized voice. Might not necessarily be exactly the same as target_language variable below
+	# Examples - English: en-US    Spanish: es-us   or   es-mx
 synth_language_code = es-us
 
 
-	# Choose one from here so it matches the target language: https://cloud.google.com/text-to-speech/docs/voices
-	# Examples - English: en-US-Neural2-I    Spanish: es-US-Neural2-B (google)  or es-MX-CecilioNeural (Azure)
+	# Choose one from here so it matches the target language: https://cloud.google.com/text-to-speech/docs/voices  /   https://learn.microsoft.com/en-us/azure/cognitive-services/speech-service/language-support?tabs=stt-tts
+	# Examples - English: en-US-Neural2-I  (Googe)  or  en-US-JasonNeural (Azure)  Spanish: es-US-Neural2-B (Google)  or es-MX-CecilioNeural (Azure)
 synth_voice_name = es-US-Neural2-B
 
 
@@ -56,8 +56,12 @@ skip_translation = False
 original_language = en-US
 target_language = es
 
+	# This will drastically improve the quality of the final result, BUT see note below
+	# Note! Setting this to True will make it so instead of just stretching the audio clips, it will have the API generate new audio clips with adjusted speaking rates
+	# This can't be done on the first pass because we don't know how long the audio clips will be until we generate them
+two_pass_voice_synth = False
 
-# Note! Setting this to true will make it so instead of just stretching the audio clips, it will have the API generate new audio clips with adjusted speaking rates
-# This can't be done on the first pass because we don't know how long the audio clips will be until we generate them
-# THIS SETTING STILL IN DEVELOPMENT AND WON'T WORK
-high_quality_mode = False
+	# On the second pass, each audio clip will be extremely close to the desired length, but a bit off
+	# Set this to True if you want to stretch the second-pass clip anyway to be exact, down to the millisecond
+	# However, this will degrade the voice and make it sound similar to if it was just 1-Pass
+force_stretch_with_twopass = False
