Multiple language processing, improved configs
- Split config into three files: config.ini, batch.ini, and cloud_service_settings.ini
- Language specific dub settings are now all in batch.ini, and allows creating dubs for multiple languages at once
- Now able to set final output format in config.ini

--- a/config.ini
+++ b/config.ini
@@ -1,43 +1,17 @@
 [SETTINGS]
 
-	# You an use a full file path, or the name of the file if it's in the same directory
-	# The video file name will also be used to name the final output audio file
-original_video_file_path = video.mp4
-srt_file_path = subtitles.srt
-
-
-	# Which TTS service will you use?
-	# Possble Values: azure / google
-tts_service = google
-
-
-	# The project name / project ID in the Google Cloud console. Required for translating
-google_project_id = your-project-name
-
-	
-	# API Key for your Speech resource in Azure (cognitive speech)
-azure_speech_key = yourkeyxxxxxx
-	# The Location/Region of the speech resource. This should be listed on the same page as the API keys.
-	# Example: eastus
-azure_speech_region = eastxyz
+	# Set to True if you don't want to translate the subtitles. If so, ignore the language variables
+skip_translation = False
+original_language = en-US
 
 
 	# Set to True if you don't want to synthesize the audio. For example, if you already did that and are testing
 skip_synthesize = False
 
 
-	#The language of the synthesized voice. Might not necessarily be exactly the same as target_language variable below
-	# Examples - English: en-US    Spanish: es-us   or   es-mx
-synth_language_code = es-us
-
-
-	# Choose one from here so it matches the target language: https://cloud.google.com/text-to-speech/docs/voices  /   https://learn.microsoft.com/en-us/azure/cognitive-services/speech-service/language-support?tabs=stt-tts
-	# Examples - English: en-US-Neural2-I  (Googe)  or  en-US-JasonNeural (Azure)  Spanish: es-US-Neural2-B (Google)  or es-MX-CecilioNeural (Azure)
-synth_voice_name = es-US-Neural2-B
-
-
-	# Google Only: Should match the gender of the chosen voice above
-synth_voice_gender = MALE
+	# The format/codec of the final audio file
+	# Possible Values:  mp3  |  aac  |  wav
+output_format = aac
 
 
 	# Must be a codec from 'Supported Audio Encodings' section here: https://cloud.google.com/speech-to-text/docs/encoding#audio-encodings
@@ -51,15 +25,10 @@ synth_audio_encoding = MP3
 synth_sample_rate = 24000
 
 
-	# Set to True if you don't want to translate the subtitles. If so, ignore the language variables
-skip_translation = False
-original_language = en-US
-target_language = es
-
 	# This will drastically improve the quality of the final result, BUT see note below
-	# Note! Setting this to True will make it so instead of just stretching the audio clips, it will have the API generate new audio clips with adjusted speaking rates
+	# Note! Setting this to true will make it so instead of just stretching the audio clips, it will have the API generate new audio clips with adjusted speaking rates
 	# This can't be done on the first pass because we don't know how long the audio clips will be until we generate them
-two_pass_voice_synth = False
+two_pass_voice_synth = True
 
 	# On the second pass, each audio clip will be extremely close to the desired length, but a bit off
 	# Set this to True if you want to stretch the second-pass clip anyway to be exact, down to the millisecond
