Create TrackAdder.py, add batch languages, output dir
- Add many preset languages to batch.ini
- Have subtitles and audio tracks put into 'output' directory
- Improve naming of outputted files
- Create TrackAdder.py: A standalone script for adding multiple language tracks for a video all at once

--- a/batch.ini
+++ b/batch.ini
@@ -18,7 +18,10 @@ srt_file_path = subtitles.srt
 
 
 [LANGUAGE-1]
-	#The language of the synthesized voice. Might not necessarily be exactly the same as target_language variable below
+	# Remember, the translation target code may be different from synth_language_code because it is the one used by the translation service, not the TTS service
+	# See the codes here: https://cloud.google.com/translate/docs/languages
+translation_target_language = es
+	# The language of the synthesized voice. Might not necessarily be exactly the same as target_language variable below
 	# Examples - English: en-US    Spanish: es-us   or   es-mx
 synth_language_code = es-mx
 	# Choose one from here so it matches the target language: https://cloud.google.com/text-to-speech/docs/voices  /   https://learn.microsoft.com/en-us/azure/cognitive-services/speech-service/language-support?tabs=stt-tts
@@ -26,12 +29,83 @@ synth_language_code = es-mx
 synth_voice_name = es-MX-CecilioNeural
 	# Google Only: Should match the gender of the chosen voice above
 synth_voice_gender = MALE
-	# Remember, the translation target code may be different because it is the one used by the translation service, not the TTS service
-translation_target_language = es
+
 
 
 [LANGUAGE-2]
-synth_language_code = es-mx
-synth_voice_name = es-MX-CecilioNeural
+# Hindi
+translation_target_language = hi
+synth_language_code = hi-IN
+synth_voice_name = hi-IN-MadhurNeural
 synth_voice_gender = MALE
-translation_target_language = es
+
+[LANGUAGE-3]
+# Arabic
+translation_target_language = ar
+synth_language_code = ar-EG
+synth_voice_name = ar-EG-ShakirNeural
+synth_voice_gender = MALE
+
+[LANGUAGE-4]
+# Russian
+translation_target_language = ru
+synth_language_code = ru-RU
+synth_voice_name = ru-RU-DmitryNeural
+synth_voice_gender = MALE
+
+[LANGUAGE-5]
+# Portuguese
+translation_target_language = pt
+synth_language_code = pt-BR
+synth_voice_name = pt-BR-FabioNeural
+synth_voice_gender = MALE
+
+[LANGUAGE-6]
+# Italian
+translation_target_language = it
+synth_language_code = it-IT
+synth_voice_name = it-IT-DiegoNeural
+synth_voice_gender = MALE
+
+[LANGUAGE-7]
+# Indonesian
+translation_target_language = id
+synth_language_code = id-ID
+synth_voice_name = id-ID-ArdiNeural
+synth_voice_gender = MALE
+
+[LANGUAGE-8]
+# Japanese
+translation_target_language = ja
+synth_language_code = ja-JP
+synth_voice_name = ja-JP-NaokiNeural
+synth_voice_gender = MALE
+
+[LANGUAGE-9]
+# Korean
+translation_target_language = ko
+synth_language_code = ko-KR
+synth_voice_name = ko-KR-BongJinNeural
+synth_voice_gender = MALE
+
+[LANGUAGE-10]
+# German
+translation_target_language = de
+synth_language_code = de-DE
+synth_voice_name = de-DE-KasperNeural
+synth_voice_gender = MALE
+
+[LANGUAGE-11]
+# Chinese (Mandarin Simplified)
+translation_target_language = zh
+synth_language_code = zh-CN
+synth_voice_name = zh-CN-YunyeNeural
+synth_voice_gender = MALE
+
+[LANGUAGE-12]
+# 
+translation_target_language = 
+synth_language_code = 
+synth_voice_name = 
+synth_voice_gender = 
+
