Remove need for temporary files
The program now processes the audio files (such as trimming and stretching) all in memory instead of having to read and write files. Though it will still download and save the TTS files sent by the APIs though (In the workingFolder)

Also removed requirement for librosa, because now use pydub to get the audio duration.

--- a/batch.ini
+++ b/batch.ini
@@ -9,7 +9,6 @@
 	# Just enter the numbers separated by commas: For example, to use LANGUAGE-1 and LANGUAGE-2, put "1,2"
 enabled_languages = 1
 
-
 	# You an use a full file path, or the name of the file if it's in the same directory
 	# The video file name will also be used to name the final output audio file
 original_video_file_path = video.mp4
@@ -17,20 +16,27 @@ srt_file_path = subtitles.srt
 
 
 
-[LANGUAGE-1]
+[LANGUAGE-0]
+# English / Testing
 	# Remember, the translation target code may be different from synth_language_code because it is the one used by the translation service, not the TTS service
 	# See the codes here: https://cloud.google.com/translate/docs/languages
-translation_target_language = es
+translation_target_language = en
 	# The language of the synthesized voice. Might not necessarily be exactly the same as target_language variable below
 	# Examples - English: en-US    Spanish: es-us   or   es-mx
-synth_language_code = es-mx
+synth_language_code = en-US
 	# Choose one from here so it matches the target language: https://cloud.google.com/text-to-speech/docs/voices  /   https://learn.microsoft.com/en-us/azure/cognitive-services/speech-service/language-support?tabs=stt-tts
 	# Examples - English: en-US-Neural2-I  (Google)  or  en-US-JasonNeural (Azure)  Spanish: es-US-Neural2-B (Google)  or es-MX-CecilioNeural (Azure)
-synth_voice_name = es-MX-CecilioNeural
+synth_voice_name = en-US-JasonNeural
 	# Google Only: Should match the gender of the chosen voice above
 synth_voice_gender = MALE
 
 
+[LANGUAGE-1]
+# Spanish
+translation_target_language = es
+synth_language_code = es-MX
+synth_voice_name = es-MX-CecilioNeural
+synth_voice_gender = MALE
 
 [LANGUAGE-2]
 # Hindi
