Add Azure batch requests
Now by default when using Azure, will send file synth requests as a batch instead of individually.  This massively increases the speed of synthesis.

Also splits requests up if necessary to keep within Azure maximums.

--- a/cloud_service_settings.ini
+++ b/cloud_service_settings.ini
@@ -15,3 +15,8 @@ azure_speech_key = yourkeyxxxxxx
 	# The Location/Region of the speech resource. This should be listed on the same page as the API keys.
 	# Example: eastus
 azure_speech_region = eastxyz
+
+
+	# Sends request to TTS service to create multiple audio clips simultaneously. MUCH faster.
+	# Currently only supported when using azure
+batch_tts_synthesize = True
