--- a/config.ini
+++ b/config.ini
@@ -34,3 +34,12 @@ two_pass_voice_synth = True
 	# Set this to True if you want to stretch the second-pass clip anyway to be exact, down to the millisecond
 	# However, this will degrade the voice and make it sound similar to if it was just 1-Pass
 force_stretch_with_twopass = False
+
+
+	# Adds a silence buffer between each spoken clip, but keeps the speech "centered" at the right spot so it's still synced
+	#    > To be clear the total length of the audio file will remain the same, each spoken clip gets shrunk within it
+	# Useful if your subtitles file butts all the beginning and end timings right up against each other
+	# Note, this applies both before and after, so the total extra between clips will be 2x this
+	# Warning, setting this too high could result in the TTS speaking extremely fast to fit into remaining clip duration
+	#   >  Around 25 - 50 milliseconds is a good starting point
+add_line_buffer_milliseconds = 0
