Add ability to combine adjacent subtitle text
If the combination of two adjacent subtitle lines is below this amount set in config, and one line starts at the same time the other ends, it will combine the lines.

Updated progress prints to accomodate

--- a/config.ini
+++ b/config.ini
@@ -37,9 +37,15 @@ force_stretch_with_twopass = False
 
 
 	# Adds a silence buffer between each spoken clip, but keeps the speech "centered" at the right spot so it's still synced
-	#    > To be clear the total length of the audio file will remain the same, each spoken clip gets shrunk within it
+	#   >  To be clear the total length of the audio file will remain the same, each spoken clip gets shrunk within it
 	# Useful if your subtitles file butts all the beginning and end timings right up against each other
 	# Note, this applies both before and after, so the total extra between clips will be 2x this
 	# Warning, setting this too high could result in the TTS speaking extremely fast to fit into remaining clip duration
 	#   >  Around 25 - 50 milliseconds is a good starting point
 add_line_buffer_milliseconds = 0
+
+
+	# If the combination of two adjacent subtitle lines is below this amount, and one starts at the same time the other ends, it will combine the lines
+	# This should improve the speech synthesis by reducing unnatural splits in spoken sentences.
+	# Setting this to zero or a low number will effectively disable it
+combine_subtitles_max_chars = 200
