Add option to change sentence pause in azure
Allows you to set exact pause between sentences in azure

--- a/config.ini
+++ b/config.ini
@@ -30,10 +30,18 @@ synth_sample_rate = 24000
 	# This can't be done on the first pass because we don't know how long the audio clips will be until we generate them
 two_pass_voice_synth = True
 
+
 	# On the second pass, each audio clip will be extremely close to the desired length, but a bit off
 	# Set this to True if you want to stretch the second-pass clip anyway to be exact, down to the millisecond
 	# However, this will degrade the voice and make it sound similar to if it was just 1-Pass
 force_stretch_with_twopass = False
+
+
+	# Azure Only: Sets the exact pause in milliseconds that the TTS voice will pause after a period between sentences
+	# Set it to "default" to keep it default which is quite slow. I find 80ms is pretty good
+	# Note: Changing this from default adds about 60 characters per line to the total Azure character usage count
+	# Possible values:  default  |  Any integer
+azure_sentence_pause = 80
 
 
 	# Adds a silence buffer between each spoken clip, but keeps the speech "centered" at the right spot so it's still synced
