Added Turkish language (#10)

--- a/batch.ini
+++ b/batch.ini
@@ -109,9 +109,15 @@ synth_voice_name = zh-CN-YunyeNeural
 synth_voice_gender = MALE
 
 [LANGUAGE-12]
-# 
-translation_target_language = 
-synth_language_code = 
-synth_voice_name = 
-synth_voice_gender = 
+# Turkish
+translation_target_language = tr
+synth_language_code = tr-TR
+synth_voice_name = tr-TR-AhmetNeural
+synth_voice_gender = MALE
 
+[LANGUAGE-13]
+#
+translation_target_language =
+synth_language_code =
+synth_voice_name =
+synth_voice_gender =
