Improve priority of combining subtitle entries
-The script will now start with the lines with the most extreme deviation from the 'goal' speaking speed, and work its way down. This improves the average speaking rate considerably.
-Also added some debug mode options
-Fixed some issues that was causing strange gaps between audio clips

--- a/config.ini
+++ b/config.ini
@@ -57,3 +57,7 @@ add_line_buffer_milliseconds = 0
 	# This should improve the speech synthesis by reducing unnatural splits in spoken sentences.
 	# Setting this to zero or a low number will effectively disable it
 combine_subtitles_max_chars = 200
+
+
+	# Mostly prevents the program from deleting files in the working directory, and also generates files for each audio step
+debug_mode = False
