Implement DeepL translation
Implement DeepL translation service, including its logic for batch translation as well as its settings. This introduces the python package deepl which is the official package for the API. Documented DeepL in the README, add logic to not require deepl key if using google translate, and viceversa, not requiring google api key or credentials if using deepl + azure.

--- a/batch.ini
+++ b/batch.ini
@@ -7,6 +7,7 @@
 	# Enter the language numbers you wish to process when the batch file is read.
 	# This is also useful for multiple presets of a single language - You could just enable one of them at a time
 	# Just enter the numbers separated by commas: For example, to use LANGUAGE-1 and LANGUAGE-2, put "1,2"
+	# Please note that supported languages and their codes vary by service. See the supported languages for each service in the README
 enabled_languages = 1
 
 	# You an use a full file path, or the name of the file if it's in the same directory
@@ -19,7 +20,7 @@ srt_file_path = subtitles.srt
 [LANGUAGE-0]
 # English / Testing
 	# Remember, the translation target code may be different from synth_language_code because it is the one used by the translation service, not the TTS service
-	# See the codes here: https://cloud.google.com/translate/docs/languages
+	# See the codes here: https://cloud.google.com/translate/docs/languages / https://www.deepl.com/docs-api/translating-text/request/
 translation_target_language = en
 	# The language of the synthesized voice. Might not necessarily be exactly the same as target_language variable below
 	# Examples - English: en-US    Spanish: es-us   or   es-mx
