--- a/cloud_service_settings.ini
+++ b/cloud_service_settings.ini
@@ -4,8 +4,18 @@
 tts_service = google
 
 
+	# Which translation service will you use? DeepL is slower but more accurate
+	# Possble Values: google / deepl
+	# Remember, changing this service will require you to change the target language codes in the batch.ini file
+translate_service = google
+
+
 	# The project name / project ID in the Google Cloud console. Required for translating
 google_project_id = your-project-name
+
+	
+	# API Key for your DeepL account. Required for translating if translate_service = deepl
+deepl_api_key = yourkeyxxxxxx
 
 	
 	# API Key for your Speech resource in Azure (cognitive speech)
