--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,11 @@ skip_translation = False
 	# Set to True if you don't want to synthesize the audio. For example, if you already did that and are testing
 skip_synthesize = False
 
+    # Set to True if you want to stop the program after translating the subtitles. 
+	# For example, if you want to manually review the resulting subtitles before synthesizing the audio.
+	# Note that to resume the process, you must set this to False again and set skip_translation to True
+stop_at_translation = False
+
 
 original_language = en-US
 
