Move deepL object to auth.py, rename variable
• Moved deepL request object to auth so only needs to be centralized
• Renamed stop_at_translate to be stop_after_translate

--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@ skip_synthesize = False
     # Set to True if you want to stop the program after translating the subtitles. 
 	# For example, if you want to manually review the resulting subtitles before synthesizing the audio.
 	# Note that to resume the process, you must set this to False again and set skip_translation to True
-stop_at_translation = False
+stop_after_translation = False
 
 
 original_language = en-US
