--- a/config.ini
+++ b/config.ini
@@ -11,8 +11,13 @@ skip_synthesize = False
 	# Note that to resume the process, you must set this to False again and set skip_translation to True
 stop_after_translation = False
 
-
+	# The BCP-47 language code for the original text language
 original_language = en-US
+
+	# Applies to DeepL translations only - Whether to have it use more or less formal language
+	# Possible Values: default | more | less
+formality_preference = default
+
 
 	# The format/codec of the final audio file
 	# Possible Values:  mp3  |  aac  |  wav
