Allow invalid translation service if skipping translation
Addresses #47 . If skip_translation is enabled, skips calls to translation service.

Also fix wrong config setting being used to compare original language to target language.

--- a/cloud_service_settings.ini
+++ b/cloud_service_settings.ini
@@ -6,6 +6,7 @@ tts_service = google
 
 	# Which translation service will you use? DeepL is slower but more accurate
 	# Possble Values: google / deepl
+	# Note: If you will be skipping translation, this doesn't matter
 translate_service = google
 
 	# In case the translation language is not supported by DeepL, use Google Translate as a fallback
