Add Support for Azure Comma Pause Setting
Adds new config setting: azure_comma_pause

Allows user to set the time in milliseconds between commas, previously not possible.

Also fixed program writing variable as int instead of string

--- a/config.ini
+++ b/config.ini
@@ -53,6 +53,13 @@ force_stretch_with_twopass = False
 	# Possible values:  default  |  Any integer
 azure_sentence_pause = 80
 
+	# Azure Only: Sets the exact pause in milliseconds that the TTS voice will pause after a comma.
+	# Set it to "default" to keep it default which is quite slow.
+	# It doesn't seem to follow this number exactly, and seems to have a minimum around 50ms
+	# Note: Changing this from default adds about 60 characters per line to the total Azure character usage count
+	# Possible values:  default  |  Any integer
+azure_comma_pause = 50
+
 
 	# Adds a silence buffer between each spoken clip, but keeps the speech "centered" at the right spot so it's still synced
 	#   >  To be clear the total length of the audio file will remain the same, each spoken clip gets shrunk within it
