Add warning about unsupported auto-sync languages
YouTube does not support auto-syncing all language transcripts. This lists the known ones that do (there may be more), and warns user if they go to translate transcripts into other languages.

--- a/config.ini
+++ b/config.ini
@@ -78,3 +78,8 @@ combine_subtitles_max_chars = 200
 
 	# Mostly prevents the program from deleting files in the working directory, and also generates files for each audio step
 debug_mode = False
+
+# ---------------- Probably should not touch these below --------------------
+
+	# List of languages YouTube is known to allow auto-syncing when uploading a transcript
+youtube_autosync_languages = es, it, ko, pt, ru, ja, de
